[gd_scene load_steps=2 format=2]

[ext_resource path="res://modules/default/power_manager/power_manager.gd" type="Script" id=1]

[node name="PowerManager" type="Node"]
script = ExtResource( 1 )

[node name="DimTimer" type="Timer" parent="."]

[node name="OffTimer" type="Timer" parent="."]

[node name="ShutdownTimer" type="Timer" parent="."]
